sumo/tests/sumo/output/meandata_edgebased/errors/missing_end2/errors.sumo
Error: The number of entries in 'begin' differs from the number in 'end' for meandata-edge 'dump_15'.
Quitting (on error).
